--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -26,7 +26,6 @@
   height: 702px;
   margin: 50px 0 0 312px;
   background: #ffffff;
-  z-index: 14;
   box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.3);
 }
 
@@ -36,7 +35,6 @@
   top: 42px;
   right: 1045px;
   left: -10px;
-  z-index: 22;
 }
 
 .profileManagement,
@@ -57,7 +55,6 @@
   font-weight: 400;
   text-align: center;
   white-space: nowrap;
-  z-index: 132;
 }
 
 .accountManagementTitle {
@@ -98,7 +95,6 @@
   line-height: 18px;
   text-align: center;
   white-space: nowrap;
-  z-index: 17;
 }
 
 .logoutIcon {
@@ -109,7 +105,6 @@
   left: 41px;
   background: url('/assets/images/마이페이지/logoutIcon.png');
   background-size: cover;
-  z-index: 18;
 }
 
 /* 마이페이지 프로필 관리 */
@@ -120,7 +115,15 @@
   right: 60px;
   left: 257px;
   font-size: 0px;
-  z-index: 44;
+}
+
+.profileBox {
+  margin-top:20px;
+    position: relative;
+    width: 948px;
+    height: 552px;
+    border:  1px solid #E0E0E0;
+  border-radius: 20px;
 }
 
 .profileManagement4 {
@@ -137,7 +140,6 @@
   line-height: 24px;
   text-align: center;
   white-space: nowrap;
-  z-index: 44;
 }
 
 .flexRowAeb {
@@ -145,13 +147,10 @@
   width: 627.614px;
   height: 97px;
   margin: 35px 0 0 33px;
-  z-index: 40;
 }
 
 .profileImage {
   display: flex;
-  align-items: center;
-  justify-content: center;
   position: absolute;
   width: 88.522px;
   height: 18px;
@@ -163,7 +162,6 @@
   line-height: 18px;
   text-align: center;
   white-space: nowrap;
-  z-index: 39;
 }
 
 .rectangle7 {
@@ -174,26 +172,27 @@
   left: 165px;
   background: #ffffff;
   border: 1px solid #d9d9d9;
-  z-index: 39;
   border-radius: 50%;
 }
 
-.change {
+.change,.change3 {
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
-  width: 71.224px;
-  height: 40px;
+  width: 81px;
+  height: 47px;
   top: 0;
   left: 278px;
   color: #333333;
   background: #f5f5f5;
   font-size: 15px;
   font-weight: 400;
-  line-height: 18.153px;
   text-align: center;
-  z-index: 38;
+}
+
+.change3 {
+  left: 680px;
 }
 
 .fileUploadMessage {
@@ -211,7 +210,6 @@
   line-height: 20px;
   text-align: left;
   text-overflow: initial;
-  z-index: 40;
   overflow: hidden;
 }
 
@@ -223,7 +221,6 @@
   width: 222.278px;
   height: 18px;
   margin: 59px 0 0 33px;
-  z-index: 33;
 }
 
 .id {
@@ -240,7 +237,6 @@
   line-height: 18px;
   text-align: center;
   white-space: nowrap;
-  z-index: 33;
 }
 
 .user {
@@ -257,7 +253,6 @@
   line-height: 18px;
   text-align: center;
   white-space: nowrap;
-  z-index: 32;
 }
 
 .flexRowCc8 {
@@ -265,17 +260,14 @@
   width: 653.696px;
   height: 50px;
   margin: 37px 0 0 33px;
-  z-index: 30;
 }
 
 .input,
 .inputProfile {
-  width: 480px;
-  max-width: 480px;
-  height: 55px;
-  border: 1px solid #848282;
+  width: 488px;
+  height: 47px;
   border-radius: 5px;
-  background: #ffffff;
+  background: #F9F9F9;
   font-size: 16px;
   padding-left: 15px;
 }
@@ -324,7 +316,6 @@
   line-height: 18px;
   text-align: center;
   white-space: nowrap;
-  z-index: 30;
 }
 
 .rectangleB {
@@ -336,7 +327,6 @@
   height: 47.968px;
   margin: 187px 0 0 834px;
   background: #76adac;
-  z-index: 43;
 }
 
 .save {
@@ -352,7 +342,6 @@
   font-weight: 700;
   line-height: 18.153px;
   text-align: center;
-  z-index: 43;
 }
 
 /* 프로필 사진 관련 팝업 */
@@ -402,24 +391,162 @@
   transition: background-color 0.3s ease;
 }
 
-.popupSave:hover {
-  background-color: #45a049;
-}
-
 .fileInputWrapper input[type='file'] {
   margin: 15px 0;
   font-size: 14px;
   display: block;
   width: 100%;
 }
+
+.nickname {
+  position: relative;
+  width: 878px;
+  height: 47px;
+  margin: 52px 0 0 33px;
+}
+.editButton {
+  position: absolute;
+  width: 81px;
+  height: 47px;
+  top: 0;
+  left: 797px;
+  cursor: pointer;
+  font-size: 0px;
+  background: transparent;
+  border: none;
+}
+
+.rectangle4 {
+  position: absolute;
+  width: 81px;
+  height: 47px;
+  top: 0;
+  left: 0;
+  background: #f5f5f5;
+}
+.nickname5 {
+  display: flex;
+  position: absolute;
+  width: 42.735px;
+  height: 18px;
+  left: -30px;
+  color: #000000;
+  font-size: 15px;
+  font-weight: 505;
+  line-height: 18px;
+  text-align: center;
+  white-space: nowrap;
+}
+.testUser {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  width: 488.4px;
+  height: 44.8px;
+  top: 0;
+  left: 166px;
+  color: #000000;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #f5f5f5;
+  padding-left:10px;
+}
+.rectangle6 {
+  position: absolute;
+  width: 948px;
+  height: 552px;
+  top: 0;
+  left: 50%;
+  background: #ffffff;
+  border: 1px solid #e0e0e0;
+  transform: translate(-50%, 0);
+  border-radius: 20px;
+}
+
+.nicknameLabel {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.nicknameText {
+  flex-grow: 1;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.saveBtn {
+  width:81px;
+  height:47px;
+  background-color: #76adac;
+  color: white;
+  font-size: 15px;
+  font-weight: 700;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+}
+
+.cancelBtn {
+  width:81px;
+  height:47px;
+  margin-left:10px;
+  background-color: #f5f5f5;
+  color: #333;
+  font-size: 15px;
+  font-weight: 700;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+}
+
+.editBtn {
+  background-color: #f5f5f5;
+  color: #333;
+  font-size: 15px;
+  font-weight: 700;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+}
+
+.nicknameEditContainer {
+  width:fit-content;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.nicknameDisplay {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.nicknameLabel {
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.testUser {
+  flex-grow: 1;
+  font-size: 15px;
+  font-weight: 400;
+}
+
 /* 마이페이지 계정 관리 */
 .rectangleC {
   position: relative;
   width: 949px;
-  height: 225px;
+  height: 515px;
   background: #ffffff;
   border: 1px solid #e8e8e8;
-  z-index: 17;
   border-radius: 20px;
 }
 
@@ -431,7 +558,6 @@
   left: 850px;
   color: #ffffff;
   background: #76adac;
-  z-index: 61;
 }
 
 .saveAccountBtn {
@@ -446,7 +572,6 @@
   font-weight: 700;
   line-height: 18.153px;
   text-align: center;
-  z-index: 20;
 }
 
 .flexColumn {
@@ -455,7 +580,6 @@
   height: 178px;
   top: 35px;
   left: 168px;
-  z-index: 31;
 }
 
 .accountText {
@@ -473,7 +597,6 @@
   line-height: 18px;
   text-align: center;
   white-space: nowrap;
-  z-index: 22;
 }
 
 .rectangleCK {
@@ -483,7 +606,6 @@
   margin: 23px 0 0 0;
   background: #ffffff;
   border: 1px solid #e8e8e8;
-  z-index: 17;
   border-radius: 20px;
 }
 
@@ -510,7 +632,6 @@
   line-height: 21.784px;
   text-align: center;
   white-space: nowrap;
-  z-index: 58;
 }
 
 .deleteUserVector {
@@ -521,7 +642,6 @@
   left: 98.52%;
   background: url('/assets/images/마이페이지/Vector.png') no-repeat center;
   background-size: 100% 100%;
-  z-index: 57;
 }
 
 .authentication {
@@ -538,7 +658,6 @@
   font-weight: 400;
   line-height: 18.153px;
   text-align: left;
-  z-index: 32;
 }
 
 .authenticationCheck {
@@ -555,7 +674,6 @@
   font-weight: 400;
   line-height: 18.153px;
   text-align: left;
-  z-index: 29;
 }
 
 .authentication,
@@ -577,7 +695,6 @@
   top: 6.16%;
   left: 20.24%;
   font-size: 0px;
-  z-index: 58;
 }
 
 .flexRowAbe {
@@ -585,7 +702,6 @@
   width: 948px;
   height: 33px;
   margin: -3px 0 0 257px;
-  z-index: 124;
 }
 
 .regroup {
@@ -594,7 +710,6 @@
   height: 33px;
   top: 0;
   left: 0;
-  z-index: 124;
 }
 
 .dateRegistered {
@@ -611,7 +726,6 @@
   font-weight: 500;
   line-height: 14.523px;
   text-align: left;
-  z-index: 119;
 }
 
 .fullWidth {
@@ -626,7 +740,6 @@
   font-weight: 505;
   line-height: 21.784px;
   white-space: nowrap;
-  z-index: 122;
 }
 
 .flexRowD15 {
@@ -638,7 +751,6 @@
   width: 708px;
   height: 228px;
   margin: 12px 0 0 30px;
-  z-index: 94;
 }
 
 .rectangle16 {
@@ -648,7 +760,6 @@
   height: 228px;
   background: #ffffff;
   border: 1px solid #d9d9d9;
-  z-index: 72;
   border-radius: 10px 0 10px 0;
 }
 
@@ -659,7 +770,6 @@
   margin: 0 0 0 0;
   background-color: #dddddd;
   background-size: cover;
-  z-index: 73;
   border-radius: 10px 0 0 0;
 }
 
@@ -674,7 +784,6 @@
   line-height: 13px;
   text-align: left;
   white-space: nowrap;
-  z-index: 77;
 }
 
 .sugugasaSeoul {
@@ -691,7 +800,6 @@
   line-height: 15.733px;
   text-align: left;
   white-space: nowrap;
-  z-index: 76;
 }
 
 .moreBtn19 {
@@ -702,7 +810,6 @@
   left: 207px;
   background-color: black;
   background-size: cover;
-  z-index: 81;
 }
 
 .seoulEunpyeongRoad {
@@ -719,14 +826,12 @@
   line-height: 13px;
   text-align: left;
   white-space: nowrap;
-  z-index: 79;
 }
 .flexRowD24 {
   position: relative;
   width: 855.1px;
   height: 33px;
   margin: 23px 0 0 44.9px;
-  z-index: 130;
 }
 
 .noImage {
@@ -743,5 +848,4 @@
   font-weight: 500;
   line-height: 15.733px;
   text-align: center;
-  z-index: 116;
 }
