--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -49,9 +49,6 @@
 
 .onBoardingView {
   position: relative;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
   width: 100%;
 }
 
@@ -356,14 +353,16 @@
 }
 
 .onBoardingContent {
-  width: auto;
-  position: static;
-  top: auto;
-  left: auto;
-  transform: none;
-  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  z-index: 2;
   margin-left: 32px;
 }
 
